Current problems of dual contouring: 1)shapes don't preserve features when contoured on too low resolution grid (ex: circled with radius = 1, centered at the center of grid square with side = 1 renders as square because too little amount of sample points of intersection with grid can be found) 2)grid squares that contain more than 1 2D surface render incorrectly
All problems can be solved increasing grid resolution
but that leads to much greater calculation times, but not render times !

choose between 0.25/64 and 0.125/128 block sizes
starting to work on optimizations !

reduced code duplication in makeVertex

MAIN GOAL :
implement |,&,- operations on CONSTRUCTED mesh, no original density function should be preserved (as it is slow + extra memory and probably stackoverflowish), SO only hermite data is stored (corners, intersections, tangents and features)